Docs : tag data 크롤링 엑셀 추가

--- a/naver_tag_review_크롤링.ipynb
+++ b/naver_tag_review_크롤링.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -278,49 +278,49 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>선릉로155길 13-2 재미난조각가</td>\n",
-       "      <td>한식</td>\n",
-       "      <td>재미난조각가</td>\n",
-       "      <td>재미난조각가</td>\n",
+       "      <td>압구정로2길 46, 연경</td>\n",
+       "      <td>중국식</td>\n",
+       "      <td>연경</td>\n",
+       "      <td>연경</td>\n",
        "      <td>서울특별시</td>\n",
        "      <td>강남구</td>\n",
-       "      <td>선릉로155길 13-2</td>\n",
-       "      <td>서울특별시 강남구 신사동 655-2번지 (지상1층)</td>\n",
-       "      <td>서울특별시 강남구 선릉로155길 13-2 (신사동,(지상1층))</td>\n",
-       "      <td>203316.334340</td>\n",
-       "      <td>446999.395006</td>\n",
+       "      <td>압구정로2길 46,</td>\n",
+       "      <td>서울특별시 강남구 신사동 510-11</td>\n",
+       "      <td>서울특별시 강남구 압구정로2길 46, 2층 210호 (신사동, ---------)</td>\n",
+       "      <td>201757.494099</td>\n",
+       "      <td>446282.454467</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>역삼로4길 16, 영동불백</td>\n",
+       "      <td>강남대로92길 29 바우골 화로구이</td>\n",
        "      <td>한식</td>\n",
-       "      <td>영동불백</td>\n",
-       "      <td>영동불백</td>\n",
+       "      <td>바우골 화로구이</td>\n",
+       "      <td>바우골 화로구이</td>\n",
        "      <td>서울특별시</td>\n",
        "      <td>강남구</td>\n",
-       "      <td>역삼로4길 16,</td>\n",
-       "      <td>서울특별시 강남구 역삼동 832-33 성우스타하우스오피스텔 B03호</td>\n",
-       "      <td>서울특별시 강남구 역삼로4길 16, B03호 (역삼동, 성우스타하우스오피스텔)</td>\n",
-       "      <td>202762.268960</td>\n",
-       "      <td>443356.787685</td>\n",
+       "      <td>강남대로92길 29</td>\n",
+       "      <td>서울특별시 강남구 역삼동 649-9</td>\n",
+       "      <td>서울특별시 강남구 강남대로92길 29 (역삼동)</td>\n",
+       "      <td>202557.470517</td>\n",
+       "      <td>444129.943354</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>역삼로 420 왕가네왕만두</td>\n",
-       "      <td>분식</td>\n",
-       "      <td>왕가네왕만두</td>\n",
-       "      <td>왕가네왕만두</td>\n",
+       "      <td>도곡로27길 5 촌집 보쌈</td>\n",
+       "      <td>한식</td>\n",
+       "      <td>촌집 보쌈</td>\n",
+       "      <td>촌집 보쌈</td>\n",
        "      <td>서울특별시</td>\n",
        "      <td>강남구</td>\n",
-       "      <td>역삼로 420</td>\n",
-       "      <td>서울특별시 강남구 대치동 909-0번지 지상1층 102호</td>\n",
-       "      <td>서울특별시 강남구 역삼로 420 (대치동,지상1층 102호)</td>\n",
-       "      <td>204607.202237</td>\n",
-       "      <td>444313.985087</td>\n",
+       "      <td>도곡로27길 5</td>\n",
+       "      <td>서울특별시 강남구 역삼동 788-27번지</td>\n",
+       "      <td>서울특별시 강남구 도곡로27길 5 (역삼동)</td>\n",
+       "      <td>203642.805000</td>\n",
+       "      <td>443457.280000</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
        "    </tr>\n",
@@ -329,35 +329,30 @@
        "</div>"
       ],
       "text/plain": [
-       "                   검색어 업태구분명    사업장명 사업장명_원본     시도  지역구          상세주소  \\\n",
-       "0  선릉로155길 13-2 재미난조각가    한식  재미난조각가  재미난조각가  서울특별시  강남구  선릉로155길 13-2   \n",
-       "1       역삼로4길 16, 영동불백    한식    영동불백    영동불백  서울특별시  강남구     역삼로4길 16,   \n",
-       "2       역삼로 420 왕가네왕만두    분식  왕가네왕만두  왕가네왕만두  서울특별시  강남구       역삼로 420   \n",
+       "                   검색어 업태구분명      사업장명   사업장명_원본     시도  지역구        상세주소  \\\n",
+       "0        압구정로2길 46, 연경   중국식        연경        연경  서울특별시  강남구  압구정로2길 46,   \n",
+       "1  강남대로92길 29 바우골 화로구이    한식  바우골 화로구이  바우골 화로구이  서울특별시  강남구  강남대로92길 29   \n",
+       "2       도곡로27길 5 촌집 보쌈    한식     촌집 보쌈     촌집 보쌈  서울특별시  강남구    도곡로27길 5   \n",
        "\n",
-       "                                 소재지전체주소  \\\n",
-       "0           서울특별시 강남구 신사동 655-2번지 (지상1층)   \n",
-       "1  서울특별시 강남구 역삼동 832-33 성우스타하우스오피스텔 B03호   \n",
-       "2        서울특별시 강남구 대치동 909-0번지 지상1층 102호   \n",
+       "                  소재지전체주소                                        도로명전체주소  \\\n",
+       "0    서울특별시 강남구 신사동 510-11  서울특별시 강남구 압구정로2길 46, 2층 210호 (신사동, ---------)   \n",
+       "1     서울특별시 강남구 역삼동 649-9                     서울특별시 강남구 강남대로92길 29 (역삼동)   \n",
+       "2  서울특별시 강남구 역삼동 788-27번지                       서울특별시 강남구 도곡로27길 5 (역삼동)   \n",
        "\n",
-       "                                       도로명전체주소        좌표정보(x)        좌표정보(y)  \\\n",
-       "0          서울특별시 강남구 선릉로155길 13-2 (신사동,(지상1층))  203316.334340  446999.395006   \n",
-       "1  서울특별시 강남구 역삼로4길 16, B03호 (역삼동, 성우스타하우스오피스텔)  202762.268960  443356.787685   \n",
-       "2            서울특별시 강남구 역삼로 420 (대치동,지상1층 102호)  204607.202237  444313.985087   \n",
-       "\n",
-       "  검색여부  영업상태명  \n",
-       "0   가능  영업/정상  \n",
-       "1   가능  영업/정상  \n",
-       "2   가능  영업/정상  "
+       "         좌표정보(x)        좌표정보(y) 검색여부  영업상태명  \n",
+       "0  201757.494099  446282.454467   가능  영업/정상  \n",
+       "1  202557.470517  444129.943354   가능  영업/정상  \n",
+       "2  203642.805000  443457.280000   가능  영업/정상  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "start_num = 1300 # 할 차례\n",
-    "num = 100\n",
+    "start_num = 1500 # 할 차례\n",
+    "num = 200\n",
     "end_num = start_num + num\n",
     "res_df = original_df[start_num:end_num]\n",
     "res_df = res_df.reset_index(drop=True)\n",
@@ -366,14 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "진행 중: 100%|██████████| 100/100 [23:39<00:00, 14.19s/it]\n"
+      "진행 중: 100%|██████████| 200/200 [44:37<00:00, 13.39s/it]\n"
      ]
     },
     {
@@ -405,33 +400,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>역삼로4길 16, 영동불백</td>\n",
+       "      <td>압구정로2길 46, 연경</td>\n",
        "      <td>음식이 맛있어요</td>\n",
-       "      <td>49</td>\n",
+       "      <td>56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>역삼로4길 16, 영동불백</td>\n",
+       "      <td>압구정로2길 46, 연경</td>\n",
        "      <td>가성비가 좋아요</td>\n",
-       "      <td>29</td>\n",
+       "      <td>53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>역삼로4길 16, 영동불백</td>\n",
-       "      <td>재료가 신선해요</td>\n",
-       "      <td>19</td>\n",
+       "      <td>압구정로2길 46, 연경</td>\n",
+       "      <td>혼밥하기 좋아요</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>역삼로4길 16, 영동불백</td>\n",
+       "      <td>압구정로2길 46, 연경</td>\n",
        "      <td>양이 많아요</td>\n",
-       "      <td>17</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>역삼로4길 16, 영동불백</td>\n",
+       "      <td>압구정로2길 46, 연경</td>\n",
        "      <td>친절해요</td>\n",
-       "      <td>12</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -440,58 +435,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>440</th>\n",
-       "      <td>도곡로8길 5 영동코다리</td>\n",
+       "      <th>745</th>\n",
+       "      <td>도산대로 445, 이도 청담</td>\n",
        "      <td>음식이 맛있어요</td>\n",
-       "      <td>226</td>\n",
+       "      <td>61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>441</th>\n",
-       "      <td>도곡로8길 5 영동코다리</td>\n",
-       "      <td>주차하기 편해요</td>\n",
-       "      <td>91</td>\n",
+       "      <th>746</th>\n",
+       "      <td>도산대로 445, 이도 청담</td>\n",
+       "      <td>인테리어가 멋져요</td>\n",
+       "      <td>55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>442</th>\n",
-       "      <td>도곡로8길 5 영동코다리</td>\n",
-       "      <td>혼밥하기 좋아요</td>\n",
-       "      <td>79</td>\n",
+       "      <th>747</th>\n",
+       "      <td>도산대로 445, 이도 청담</td>\n",
+       "      <td>매장이 넓어요</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>443</th>\n",
-       "      <td>도곡로8길 5 영동코다리</td>\n",
+       "      <th>748</th>\n",
+       "      <td>도산대로 445, 이도 청담</td>\n",
        "      <td>친절해요</td>\n",
-       "      <td>78</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>444</th>\n",
-       "      <td>도곡로8길 5 영동코다리</td>\n",
-       "      <td>재료가 신선해요</td>\n",
-       "      <td>45</td>\n",
+       "      <th>749</th>\n",
+       "      <td>도산대로 445, 이도 청담</td>\n",
+       "      <td>특별한 날 가기 좋아요</td>\n",
+       "      <td>21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>445 rows × 3 columns</p>\n",
+       "<p>750 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                매장명       tag   인원\n",
-       "0    역삼로4길 16, 영동불백  음식이 맛있어요   49\n",
-       "1    역삼로4길 16, 영동불백  가성비가 좋아요   29\n",
-       "2    역삼로4길 16, 영동불백  재료가 신선해요   19\n",
-       "3    역삼로4길 16, 영동불백    양이 많아요   17\n",
-       "4    역삼로4길 16, 영동불백      친절해요   12\n",
-       "..              ...       ...  ...\n",
-       "440   도곡로8길 5 영동코다리  음식이 맛있어요  226\n",
-       "441   도곡로8길 5 영동코다리  주차하기 편해요   91\n",
-       "442   도곡로8길 5 영동코다리  혼밥하기 좋아요   79\n",
-       "443   도곡로8길 5 영동코다리      친절해요   78\n",
-       "444   도곡로8길 5 영동코다리  재료가 신선해요   45\n",
+       "                 매장명           tag  인원\n",
+       "0      압구정로2길 46, 연경      음식이 맛있어요  56\n",
+       "1      압구정로2길 46, 연경      가성비가 좋아요  53\n",
+       "2      압구정로2길 46, 연경      혼밥하기 좋아요  35\n",
+       "3      압구정로2길 46, 연경        양이 많아요  34\n",
+       "4      압구정로2길 46, 연경          친절해요  30\n",
+       "..               ...           ...  ..\n",
+       "745  도산대로 445, 이도 청담      음식이 맛있어요  61\n",
+       "746  도산대로 445, 이도 청담     인테리어가 멋져요  55\n",
+       "747  도산대로 445, 이도 청담       매장이 넓어요  35\n",
+       "748  도산대로 445, 이도 청담          친절해요  32\n",
+       "749  도산대로 445, 이도 청담  특별한 날 가기 좋아요  21\n",
        "\n",
-       "[445 rows x 3 columns]"
+       "[750 rows x 3 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,17 +573,24 @@
     "        continue\n",
     "\n",
     "result_df = pd.DataFrame(data_list)\n",
-    "result_df"
+    "result_df\n",
+    "\n",
+    "# 100개당 22분 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "result_df.to_excel(f'./data/restaurant_tag_data/restaurant_tag_df_{start_num}_{end_num}.xlsx', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
