Docs : 음식점 태그 엑셀 완성

--- a/data/엑셀파일합치기.ipynb
+++ b/data/엑셀파일합치기.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,20 +12,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder_path = 'D:/파이썬/data/data/temp'\n",
+    "folder_name = 'restaurant_tag_data'\n",
+    "\n",
+    "folder_path = r'D:/파이썬/data/data/{}'.format(folder_name)\n",
     "\n",
     "# 폴더 내의 모든 파일 목록 가져오기\n",
     "file_list = os.listdir(folder_path)\n",
     "\n",
     "# 모든 Excel 파일을 하나의 DataFrame으로 합치기\n",
-    "combined_df = pd.concat([pd.read_excel(os.path.join(folder_path, file)) for file in file_list], ignore_index=True)\n",
+    "combined_df = pd.concat([pd.read_excel(os.path.join(folder_path, file)) for file in file_list if file.endswith('.xlsx')], ignore_index=True)\n",
+    "\n",
+    "# 'index_original' 컬럼 삭제\n",
+    "combined_df.drop('Unnamed: 0', axis=1, inplace=True)\n",
+    "\n",
+    "# 중복 제거\n",
+    "combined_df.drop_duplicates(inplace=True)\n",
     "\n",
     "# 결과를 새로운 Excel 파일로 저장\n",
-    "combined_df.to_excel('combined_file_origin.xlsx', index=False)"
+    "combined_df.to_excel(os.path.join(folder_path, '{}_origin.xlsx'.format(folder_name)), index=False)"
    ]
   },
   {
@@ -42,16 +50,16 @@
     }
    ],
    "source": [
-    "# 'index_original' 컬럼 삭제\n",
-    "combined_df.drop('index_original', axis=1, inplace=True)\n",
+    "# # 'index_original' 컬럼 삭제\n",
+    "# combined_df.drop('index_original', axis=1, inplace=True)\n",
     "\n",
-    "# 중복 제거\n",
-    "combined_df.drop_duplicates(inplace=True)\n",
+    "# # 중복 제거\n",
+    "# combined_df.drop_duplicates(inplace=True)\n",
     "\n",
-    "# '검색여부'가 '가능'인 행만 추출\n",
-    "filtered_df = combined_df[combined_df['검색여부'] == '가능'].copy()\n",
+    "# # '검색여부'가 '가능'인 행만 추출\n",
+    "# filtered_df = combined_df[combined_df['검색여부'] == '가능'].copy()\n",
     "\n",
-    "print(len(filtered_df),len(combined_df))"
+    "# print(len(filtered_df),len(combined_df))"
    ]
   },
   {
@@ -60,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_df.to_excel('combined_file.xlsx', index=False)"
+    "# filtered_df.to_excel('combined_file.xlsx', index=False)"
    ]
   }
  ],
