--- a/naver_tag_review_크롤링.ipynb
+++ b/naver_tag_review_크롤링.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "8295  446748.562578   가능  영업/정상  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,19 +224,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_df.to_excel('./data/res_original_df.xlsx')"
+    "# original_df.to_excel('./data/res_original_df.xlsx')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 테그 데이터 크롤링"
+    "### tag 데이터 크롤링"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -278,49 +278,49 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>압구정로2길 46, 연경</td>\n",
-       "      <td>중국식</td>\n",
-       "      <td>연경</td>\n",
-       "      <td>연경</td>\n",
+       "      <td>논현로85길 5-13, 아쭈맛나</td>\n",
+       "      <td>한식</td>\n",
+       "      <td>아쭈맛나</td>\n",
+       "      <td>아쭈맛나</td>\n",
        "      <td>서울특별시</td>\n",
        "      <td>강남구</td>\n",
-       "      <td>압구정로2길 46,</td>\n",
-       "      <td>서울특별시 강남구 신사동 510-11</td>\n",
-       "      <td>서울특별시 강남구 압구정로2길 46, 2층 210호 (신사동, ---------)</td>\n",
-       "      <td>201757.494099</td>\n",
-       "      <td>446282.454467</td>\n",
+       "      <td>논현로85길 5-13,</td>\n",
+       "      <td>서울특별시 강남구 역삼동 738-17</td>\n",
+       "      <td>서울특별시 강남구 논현로85길 5-13, 지상1층 101호 (역삼동)</td>\n",
+       "      <td>203198.556492</td>\n",
+       "      <td>444024.178990</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>강남대로92길 29 바우골 화로구이</td>\n",
+       "      <td>언주로 506, 순찌보쌈</td>\n",
        "      <td>한식</td>\n",
-       "      <td>바우골 화로구이</td>\n",
-       "      <td>바우골 화로구이</td>\n",
+       "      <td>순찌보쌈</td>\n",
+       "      <td>순찌보쌈</td>\n",
        "      <td>서울특별시</td>\n",
        "      <td>강남구</td>\n",
-       "      <td>강남대로92길 29</td>\n",
-       "      <td>서울특별시 강남구 역삼동 649-9</td>\n",
-       "      <td>서울특별시 강남구 강남대로92길 29 (역삼동)</td>\n",
-       "      <td>202557.470517</td>\n",
-       "      <td>444129.943354</td>\n",
+       "      <td>언주로 506,</td>\n",
+       "      <td>서울특별시 강남구 역삼동 701-1 역삼 아르누보씨티</td>\n",
+       "      <td>서울특별시 강남구 언주로 506, 역삼 아르누보씨티 지상1층 110호 (역삼동)</td>\n",
+       "      <td>203716.938086</td>\n",
+       "      <td>444579.034009</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>도곡로27길 5 촌집 보쌈</td>\n",
+       "      <td>언주로 506, 덮깨비</td>\n",
        "      <td>한식</td>\n",
-       "      <td>촌집 보쌈</td>\n",
-       "      <td>촌집 보쌈</td>\n",
+       "      <td>덮깨비</td>\n",
+       "      <td>덮깨비</td>\n",
        "      <td>서울특별시</td>\n",
        "      <td>강남구</td>\n",
-       "      <td>도곡로27길 5</td>\n",
-       "      <td>서울특별시 강남구 역삼동 788-27번지</td>\n",
-       "      <td>서울특별시 강남구 도곡로27길 5 (역삼동)</td>\n",
-       "      <td>203642.805000</td>\n",
-       "      <td>443457.280000</td>\n",
+       "      <td>언주로 506,</td>\n",
+       "      <td>서울특별시 강남구 역삼동 701-1 역삼 아르누보씨티</td>\n",
+       "      <td>서울특별시 강남구 언주로 506, 역삼 아르누보씨티 지상1층 109호 (역삼동)</td>\n",
+       "      <td>203716.938086</td>\n",
+       "      <td>444579.034009</td>\n",
        "      <td>가능</td>\n",
        "      <td>영업/정상</td>\n",
        "    </tr>\n",
@@ -329,30 +329,35 @@
        "</div>"
       ],
       "text/plain": [
-       "                   검색어 업태구분명      사업장명   사업장명_원본     시도  지역구        상세주소  \\\n",
-       "0        압구정로2길 46, 연경   중국식        연경        연경  서울특별시  강남구  압구정로2길 46,   \n",
-       "1  강남대로92길 29 바우골 화로구이    한식  바우골 화로구이  바우골 화로구이  서울특별시  강남구  강남대로92길 29   \n",
-       "2       도곡로27길 5 촌집 보쌈    한식     촌집 보쌈     촌집 보쌈  서울특별시  강남구    도곡로27길 5   \n",
+       "                 검색어 업태구분명  사업장명 사업장명_원본     시도  지역구          상세주소  \\\n",
+       "0  논현로85길 5-13, 아쭈맛나    한식  아쭈맛나    아쭈맛나  서울특별시  강남구  논현로85길 5-13,   \n",
+       "1      언주로 506, 순찌보쌈    한식  순찌보쌈    순찌보쌈  서울특별시  강남구      언주로 506,   \n",
+       "2       언주로 506, 덮깨비    한식   덮깨비     덮깨비  서울특별시  강남구      언주로 506,   \n",
        "\n",
-       "                  소재지전체주소                                        도로명전체주소  \\\n",
-       "0    서울특별시 강남구 신사동 510-11  서울특별시 강남구 압구정로2길 46, 2층 210호 (신사동, ---------)   \n",
-       "1     서울특별시 강남구 역삼동 649-9                     서울특별시 강남구 강남대로92길 29 (역삼동)   \n",
-       "2  서울특별시 강남구 역삼동 788-27번지                       서울특별시 강남구 도곡로27길 5 (역삼동)   \n",
+       "                         소재지전체주소  \\\n",
+       "0           서울특별시 강남구 역삼동 738-17   \n",
+       "1  서울특별시 강남구 역삼동 701-1 역삼 아르누보씨티   \n",
+       "2  서울특별시 강남구 역삼동 701-1 역삼 아르누보씨티   \n",
        "\n",
-       "         좌표정보(x)        좌표정보(y) 검색여부  영업상태명  \n",
-       "0  201757.494099  446282.454467   가능  영업/정상  \n",
-       "1  202557.470517  444129.943354   가능  영업/정상  \n",
-       "2  203642.805000  443457.280000   가능  영업/정상  "
+       "                                        도로명전체주소        좌표정보(x)        좌표정보(y)  \\\n",
+       "0        서울특별시 강남구 논현로85길 5-13, 지상1층 101호 (역삼동)  203198.556492  444024.178990   \n",
+       "1  서울특별시 강남구 언주로 506, 역삼 아르누보씨티 지상1층 110호 (역삼동)  203716.938086  444579.034009   \n",
+       "2  서울특별시 강남구 언주로 506, 역삼 아르누보씨티 지상1층 109호 (역삼동)  203716.938086  444579.034009   \n",
+       "\n",
+       "  검색여부  영업상태명  \n",
+       "0   가능  영업/정상  \n",
+       "1   가능  영업/정상  \n",
+       "2   가능  영업/정상  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "start_num = 1500 # 할 차례\n",
-    "num = 200\n",
+    "start_num = 7900 # 할 차례\n",
+    "num = 100\n",
     "end_num = start_num + num\n",
     "res_df = original_df[start_num:end_num]\n",
     "res_df = res_df.reset_index(drop=True)\n",
@@ -361,134 +366,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "진행 중: 100%|██████████| 200/200 [44:37<00:00, 13.39s/it]\n"
+      "진행 중:  86%|████████▌ | 86/100 [22:10<03:36, 15.47s/it]\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>매장명</th>\n",
-       "      <th>tag</th>\n",
-       "      <th>인원</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>압구정로2길 46, 연경</td>\n",
-       "      <td>음식이 맛있어요</td>\n",
-       "      <td>56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>압구정로2길 46, 연경</td>\n",
-       "      <td>가성비가 좋아요</td>\n",
-       "      <td>53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>압구정로2길 46, 연경</td>\n",
-       "      <td>혼밥하기 좋아요</td>\n",
-       "      <td>35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>압구정로2길 46, 연경</td>\n",
-       "      <td>양이 많아요</td>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>압구정로2길 46, 연경</td>\n",
-       "      <td>친절해요</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>745</th>\n",
-       "      <td>도산대로 445, 이도 청담</td>\n",
-       "      <td>음식이 맛있어요</td>\n",
-       "      <td>61</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>746</th>\n",
-       "      <td>도산대로 445, 이도 청담</td>\n",
-       "      <td>인테리어가 멋져요</td>\n",
-       "      <td>55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>747</th>\n",
-       "      <td>도산대로 445, 이도 청담</td>\n",
-       "      <td>매장이 넓어요</td>\n",
-       "      <td>35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>748</th>\n",
-       "      <td>도산대로 445, 이도 청담</td>\n",
-       "      <td>친절해요</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>749</th>\n",
-       "      <td>도산대로 445, 이도 청담</td>\n",
-       "      <td>특별한 날 가기 좋아요</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>750 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 매장명           tag  인원\n",
-       "0      압구정로2길 46, 연경      음식이 맛있어요  56\n",
-       "1      압구정로2길 46, 연경      가성비가 좋아요  53\n",
-       "2      압구정로2길 46, 연경      혼밥하기 좋아요  35\n",
-       "3      압구정로2길 46, 연경        양이 많아요  34\n",
-       "4      압구정로2길 46, 연경          친절해요  30\n",
-       "..               ...           ...  ..\n",
-       "745  도산대로 445, 이도 청담      음식이 맛있어요  61\n",
-       "746  도산대로 445, 이도 청담     인테리어가 멋져요  55\n",
-       "747  도산대로 445, 이도 청담       매장이 넓어요  35\n",
-       "748  도산대로 445, 이도 청담          친절해요  32\n",
-       "749  도산대로 445, 이도 청담  특별한 날 가기 좋아요  21\n",
-       "\n",
-       "[750 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NoSuchWindowException",
+     "evalue": "Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=122.0.6261.95)\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNoSuchWindowException\u001b[0m                     Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [105]\u001b[0m, in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;28mlen\u001b[39m(res_df)), desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m진행 중\u001b[39m\u001b[38;5;124m'\u001b[39m, position\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, leave\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[0;32m     15\u001b[0m     name \u001b[38;5;241m=\u001b[39m res_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m검색어\u001b[39m\u001b[38;5;124m'\u001b[39m][i]\n\u001b[1;32m---> 16\u001b[0m     \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhttps://map.naver.com/p/search/\u001b[39;49m\u001b[38;5;132;43;01m{}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mformat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m3\u001b[39m)  \n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m :\n",
+      "File \u001b[1;32mc:\\Users\\hare0\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:333\u001b[0m, in \u001b[0;36mWebDriver.get\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    329\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, url):\n\u001b[0;32m    330\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    331\u001b[0m \u001b[38;5;124;03m    Loads a web page in the current browser session.\u001b[39;00m\n\u001b[0;32m    332\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 333\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGET\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43murl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43murl\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\hare0\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:321\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    319\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    320\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 321\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    322\u001b[0m     response[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(\n\u001b[0;32m    323\u001b[0m         response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    324\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32mc:\\Users\\hare0\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:242\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    240\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    241\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)\n\u001b[1;32m--> 242\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mNoSuchWindowException\u001b[0m: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=122.0.6261.95)\n"
+     ]
     }
    ],
    "source": [
@@ -505,14 +405,11 @@
     "category_name_list = []\n",
     "price_list = []\n",
     "\n",
-    "\n",
-    "# for i in range(0,len(res_df)):\n",
-    "\n",
     "for i in tqdm(range(0, len(res_df)), desc='진행 중', position=0, leave=True):\n",
     "    name = res_df['검색어'][i]\n",
     "    driver.get('https://map.naver.com/p/search/{}'.format(name))\n",
-    "\n",
     "    time.sleep(3)  \n",
+    "\n",
     "    try :\n",
     "        if driver.find_elements(By.ID,'entryIframe') :\n",
     "            entryIframe = driver.find_element(By.ID,'entryIframe')\n",
@@ -534,24 +431,12 @@
     "        for _ in range(4):\n",
     "        # 스크롤을 위한 JavaScript 코드 실행\n",
     "            driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "            time.sleep(2) \n",
+    "            time.sleep(2.5) \n",
     "\n",
     "        # HTML 추출\n",
     "        html = driver.page_source\n",
     "        soup = BeautifulSoup(html, 'html.parser')\n",
     "        items = soup.select('ul.uNsI9 li.nbD78, ul.uNsI9 li.nbD78.Xcpsu')\n",
-    "\n",
-    "        # # tag 끝까지 나오게 클릭 \n",
-    "        # try :\n",
-    "        #     while driver.find_elements(By.CLASS_NAME, 'Tvx37'):\n",
-    "        #         try:\n",
-    "        #             button = driver.find_element(By.XPATH, '//*[@id=\"app-root\"]/div/div/div/div[6]/div[2]/div[1]/div/div/div[2]/a[1]')\n",
-    "        #             button.click()\n",
-    "        #             time.sleep(0.4)\n",
-    "        #         except ElementClickInterceptedException:\n",
-    "        #             break\n",
-    "        # except NoSuchElementException:\n",
-    "        #     print(\"No more '더보기' button found. Exiting the loop.\")\n",
     "\n",
     "        # 여러 식당 정보를 반복하며 리스트에 추가\n",
     "        for item in items:\n",
@@ -573,24 +458,9 @@
     "        continue\n",
     "\n",
     "result_df = pd.DataFrame(data_list)\n",
-    "result_df\n",
-    "\n",
-    "# 100개당 22분 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "result_df # 100개당 22분 \n",
     "result_df.to_excel(f'./data/restaurant_tag_data/restaurant_tag_df_{start_num}_{end_num}.xlsx', index=False)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
