Fix : 의미없는 부분 삭제

--- a/naver_user_크롤링.ipynb
+++ b/naver_user_크롤링.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "2  영업/정상  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "1  영업/정상  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,14 +438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "진행 중: 100%|██████████| 2/2 [00:22<00:00, 11.49s/it]\n"
+      "진행 중: 100%|██████████| 2/2 [00:16<00:00,  8.22s/it]\n"
      ]
     },
     {
@@ -533,7 +533,7 @@
        "5  https://m.place.naver.com/my/5d251d01dd1a688ac...  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,27 +730,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# driver = webdriver.Chrome(ChromeDriverManager().install())\n",
-    "\n",
-    "# # 스크롤 횟수 \n",
-    "# page_down = 3\n",
-    "\n",
-    "# for i in tqdm(range(0, len(user_url_info_df)), desc='진행 중', position=0, leave=True):\n",
-    "#     driver.get(user_url_info_df['url'][i])\n",
-    "#     time.sleep(3)\n",
-    "#     user_df = find_user_data(page_down,driver) \n",
-    "\n",
-    "#     total_user_df = pd.concat([total_user_df, user_df], ignore_index=True)\n",
-    "\n",
-    "# total_user_df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -759,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +759,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "진행 중:  17%|█▋        | 1/6 [00:31<02:35, 31.11s/it]"
+      "진행 중:  17%|█▋        | 1/6 [00:28<02:21, 28.30s/it]"
      ]
     },
     {
@@ -794,7 +773,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "진행 중:  33%|███▎      | 2/6 [01:10<02:22, 35.74s/it]"
+      "진행 중:  33%|███▎      | 2/6 [01:05<02:13, 33.49s/it]"
      ]
     },
     {
@@ -808,7 +787,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "진행 중:  50%|█████     | 3/6 [01:48<01:50, 36.85s/it]"
+      "진행 중:  50%|█████     | 3/6 [01:42<01:45, 35.06s/it]"
      ]
     },
     {
@@ -822,7 +801,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "진행 중:  67%|██████▋   | 4/6 [02:57<01:39, 49.71s/it]"
+      "진행 중:  67%|██████▋   | 4/6 [02:08<01:02, 31.42s/it]"
      ]
     },
     {
@@ -836,7 +815,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "진행 중:  83%|████████▎ | 5/6 [03:51<00:51, 51.16s/it]"
+      "진행 중:  83%|████████▎ | 5/6 [02:38<00:30, 30.85s/it]"
      ]
     },
     {
@@ -850,7 +829,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "진행 중: 100%|██████████| 6/6 [04:51<00:00, 48.66s/it]\n"
+      "진행 중: 100%|██████████| 6/6 [03:22<00:00, 33.79s/it]\n"
      ]
     }
    ],
@@ -890,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +963,7 @@
        "5       하늘빛눈  353   0   2  https://m.place.naver.com/my/5d251d01dd1a688ac..."
       ]
      },
-     "execution_count": 127,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1215,7 @@
        "[68 rows x 10 columns]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1226,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "아이디                                              arias7932\n",
+       "매장명                                        고기이야기본점※강남곱창이야기\n",
+       "카테고리                                                    없음\n",
+       "주소                                                      없음\n",
+       "리뷰 내용    직원분들이 친절하고 넘 좋았어요^^가성비 갑\\n고기두 맛나고~알고보니 곱창이야기 사...\n",
+       "세부정보                                                      \n",
+       "태그                                                        \n",
+       "방문일자                                                      \n",
+       "요일                                                       5\n",
+       "재방문횟수                                                19327\n",
+       "Name: 4, dtype: object"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_user_df.iloc[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
