Fix : 폴더명 수정

--- a/naver_매장정보_크롤링(2).ipynb
+++ b/naver_매장정보_크롤링(2).ipynb
@@ -357,7 +357,7 @@
    ],
    "source": [
     "start_num = 0 # 할 차례, 여기를 계속 수정해주세요. \n",
-    "num = 100 # 몇개씩 크롤링할지(기본은 100개를 추천합니다.)\n",
+    "num = 5 # 몇개씩 크롤링할지(기본은 100개를 추천합니다.)\n",
     "end_num = start_num + num\n",
     "res_df = original_df[start_num:end_num] # 맨 마지막 크롤링할떄는 end_num을 지우세요. [start_num:] <-이렇게 \n",
     "res_df = res_df.reset_index(drop=True)\n",
@@ -377,14 +377,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# webdriver_manager를 사용하여 ChromeDriver 다운로드 및 설정 \n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "# # webdriver_manager를 사용하여 ChromeDriver 다운로드 및 설정 \n",
+    "# driver = webdriver.Chrome(ChromeDriverManager().install())\n",
     "\n",
     "\n",
-    "# # # webdriver_manager를 사용하여 ChromeDriver 다운로드 및 설정\n",
-    "# import chromedriver_autoinstaller\n",
-    "# chromedriver_autoinstaller.install()\n",
-    "# driver = webdriver.Chrome()"
+    "# # webdriver_manager를 사용하여 ChromeDriver 다운로드 및 설정\n",
+    "import chromedriver_autoinstaller\n",
+    "chromedriver_autoinstaller.install()\n",
+    "driver = webdriver.Chrome()"
    ]
   },
   {
